# wasm-pack-template

./: Cargo.toml
src/: lib.rs
static/: index.html
